--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 @import "@fontsource/pacifico/400.css";
 @import "@fontsource/roboto/400.css";
 @import "@fontsource/delius/400.css";
-
+@import "./scrollbar.css";
 body {
   background-image: url("/bg.webp");
   background-size: cover;
